2007-10-15  Dan Williams  <dcbw@redhat.com>

	* src/applet.glade
		- Remove border widths on subwidgets so they align better with the
			wireless-dialog
		- Make all labels left-aligned
		- Implement WPA-EAP widget
		- Implement EAP-TLS method widget

	* src/wireless-security/wireless-security.c
	  src/wireless-security/wireless-security.h
		- (ws_wpa_fill_default_ciphers): generic function for filling in default
			WPA ciphers

	* src/wireless-security/ws-wpa-psk.c
		- (src/wireless-security/ws-wpa-psk.c): use ws_wpa_fill_default_ciphers()

	* src/wireless-security/ws-wpa-eap.c
	  src/wireless-security/ws-wpa-eap.h
		- Implement shell WPA-EAP widget

	* src/wireless-security/Makefile.am
	  src/wireless-security/eap-method.c
	  src/wireless-security/eap-method.h
		- Implement EAP method superclass

	* src/wireless-security/eap-method-tls.c
	  src/wireless-security/eap-method-tls.h
		- Implement EAP-TLS UI bits

	* src/wireless-dialog.c
		- (security_combo_init): add WPA-EAP options; don't leak wireless
			security widgets on dialog destruction

2007-10-14  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/wireless-security.h
	  src/wireless-security/Makefile.am
	  src/wireless-security/ws-leap.c
	  src/wireless-security/ws-leap.h
	  src/wireless-dialog.c
		- Add LEAP support

2007-10-14  Dan Williams  <dcbw@redhat.com>

	* src/applet.glade
		- Fix up LEAP widget
		- Add max length constraints on some security widgets

2007-10-13  Dan Williams  <dcbw@redhat.com>

	* src/Makefile.am
	  src/sha1.h -> src/wireless-security/sha1.h
	  src/sha1.c -> src/wireless-security/sha1.c
	  src/wireless-security/ws-wpa-psk.h
	  src/wireless-security/ws-wpa-psk.c
	  src/wireless-security/wireless-security.h
	  src/wireless-security/Makefile.am
		- Add WPA-PSK passphrase and hex support

2007-10-13  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/Makefile.am
	  src/wireless-security/ws-wep-passphrase.c
	  src/wireless-security/ws-wep-passphrase.h