@@ -1,3 +1,8 @@
+2007-10-16  Tambet Ingo  <tambet@gmail.com>
+
+	* src/applet.c (get_security_for_ap): Wireless security protocol is a GSList
+	of strings, not a string.
+
 2007-10-15  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.glade
